# bili-identity

./: .flake8  .gitignore  .spec  MANIFEST.in  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: build.yml
bili_identity/: __init__.py  config.py  main.py
bili_identity/api/: __init__.py  auth.py  oidc.py
bili_identity/core/: bilibili.py
bili_identity/db/: __init__.py  engine.py  init.py  jwks.py  jwt.py  kv_backend.py  mapping.py  session.py  session_id.py  user.py  verifyction_code.py
bili_identity/models/: __init__.py  jwks.py  revokedjwt.py  token.py  user.py  verification.py
bili_identity/schemas/: __init__.py  auth.py
bili_identity/services/: __init__.py  auth.py  auth_service.py  jwks.py  jwt.py  session.py  user.py
bili_identity/utils/: __init__.py  extract.py  jwk.py  jwt.py  random.py  random_gen.py  session.py
docs/: auth_api.md
nix/: 0001-fix-fetch_session_msgs.patch  deps.nix  devshell.nix  package.nix
web/: package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.css  App.jsx  code.jsx
