[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bili-identity"
description = "A lightweight OpenID layer for Bilibili accounts"
authors = [
    { name = "Moraxyc", email = "i@moraxyc.com" }
]
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: Chinese (Simplified)",
    "Programming Language :: Python :: 3.13"
]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Homepage = "https://github.com/Moraxyc/bili-identity"

[project.scripts]
bili-identity = "bili_identity.main:main"

[tool.setuptools.dynamic]
version = { attr = "bili_identity.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["bili_identity*"]
